Initial attempt at refactoring. Compile on JDK17, Code fixes